# learnopengl

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  vim.sess
common/: Makefile  Shader.hpp  controls.cpp  controls.hpp  debug.cpp  debug.hpp
includes/: BinDataUtils.hpp  Buffers.hpp  Camera.hpp  Files.hpp  Mesh.hpp  Model.hpp  Program.hpp  Shader.hpp  Textures.hpp  Transform.hpp  Utils.hpp  Window.hpp
shaders/: SimpleFragmentShader.fs  SimpleVertexShader.vs  lightSource.fs  lightSource.vs  stencil.fs  stencil.vs
